small changesgit add -A .

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -38,7 +38,7 @@
         android:layout_margin="40dp"
         android:layout_marginBottom="100dp"
         android:id="@+id/textView"
-        android:text="Get temperature here"
+        android:text=""
         android:textColor="#F6F8F5"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
