remove text on main screen, fix double home, organize some files and remove some gradle implementations

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -22,7 +22,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Get Weather"
+        android:text=""
         android:layout_centerInParent="true"
         android:id="@+id/btVar1"
         android:textSize="20dp"
