--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -37,7 +37,7 @@
         android:fontFamily="sans-serif-black"
         android:layout_margin="40dp"
         android:layout_marginBottom="100dp"
-        android:id="@+id/textView"
+        android:id="@+id/isItAvailable"
         android:text=""
         android:textColor="#F6F8F5"/>
 
