--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -18,9 +18,10 @@
             android:layout_height="fill_parent"
             android:layout_width="fill_parent"
             android:text="MD3"
-            android:textColor="#80ffffff"
+            android:paddingTop="24.0dip"
+            android:textColor="#85fafafa"
             android:textSize="26.0sp"
-            app:fontName="GoogleSansText-Regular.ttf" />
+            app:fontName="Google_Sans_Display-700-100_0-0_0.ttf" />
 
     </RelativeLayout>
 
