--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -8,18 +8,28 @@
     android:layout_width="match_parent"
     tools:context=".MainActivity">
 
+
+    <ImageView
+        android:background="@drawable/hometest"
+        android:id="@+id/te"
+        android:layout_height="220dp"
+        android:layout_width="fill_parent"
+        android:scaleType="centerInside" />
+
     <com.google.android.material.appbar.AppBarLayout
-        android:fitsSystemWindows="false"
+        android:fitsSystemWindows="true"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
+        android:layout_marginTop="24.0dip"
+        android:background="#00000000"
         android:theme="@style/Theme.Drawertest.AppBarOverlay">
 
         <androidx.appcompat.widget.Toolbar
-            android:fitsSystemWindows="false"
+            android:fitsSystemWindows="true"
             android:id="@+id/toolbar"
             android:layout_height="?attr/actionBarSize"
-            android:layout_marginTop="24dp"
             android:layout_width="match_parent"
+            android:background="#00000000"
             app:popupTheme="@style/Theme.Drawertest.PopupOverlay" />
 
 
@@ -32,7 +42,7 @@
         android:id="@+id/fab"
         android:layout_gravity="bottom|end"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="48dip"
         android:layout_marginEnd="@dimen/fab_margin"
         android:layout_width="wrap_content"
         app:srcCompat="@android:drawable/ic_dialog_email" />
