--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -21,7 +21,7 @@
             android:paddingTop="24.0dip"
             android:textColor="#7010101c"
             android:textSize="26.0sp"
-            app:fontName="Google_Sans_Display-700-100_0-0_0.ttf" />
+            app:fontName="lyftproui_bold.otf" />
 
     </RelativeLayout>
 
