--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,7 +5,7 @@
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:statusBarColor">#00000000</item>
-        <item name="android:windowLightStatusBar">true</item>
+        <item name="android:windowLightStatusBar">false</item>
         <item name="android:fitsSystemWindows">false</item>
         <item name="android:windowLayoutInDisplayCutoutMode">shortEdges</item>
         <item name="android:windowTranslucentNavigation">true</item>
@@ -26,7 +26,7 @@
 
     <style
         name="Theme.Drawertest.AppBarOverlay"
-            parent="Theme.Material3.DynamicColors.DayNight" />
+            parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
 
     <style
         name="Theme.Drawertest.PopupOverlay"
