--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,6 +6,7 @@
     android:fitsSystemWindows="false"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
+    android:background="?@attr/colorOnSecondary"
     tools:context=".ui.home.HomeFragment">
 
     <TextView
@@ -21,6 +22,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
