--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,44 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<io.hifii.drawertest.ScrimInsetsFrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_height="match_parent"
+    xmlns:customfontdemo="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/navdrawer"
     android:layout_width="match_parent"
-    android:fitsSystemWindows="false"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/app_bar_main">
-
-    <fragment
-        android:id="@+id/nav_host_fragment_content_main"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    app:appInsetForeground="@android:color/transparent">
+    
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_height="match_parent"
         android:layout_width="match_parent"
-        android:name="androidx.navigation.fragment.NavHostFragment"
-        app:defaultNavHost="true"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:navGraph="@navigation/mobile_navigation" />
+        android:background="#10000000"
+        android:fitsSystemWindows="false"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        tools:showIn="@layout/app_bar_main">
 
-    <Button
-        android:background="@drawable/navigation_empty_icon"
-        android:id="@+id/btVar1"
-        android:layout_centerInParent="true"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:padding="16dp"
-        android:text=""
-        android:textSize="20dp" />
+        <fragment
+            android:id="@+id/nav_host_fragment_content_main"
+            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            android:name="androidx.navigation.fragment.NavHostFragment"
+            app:defaultNavHost="true"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:navGraph="@navigation/mobile_navigation" />
 
-    <TextView
-        android:fontFamily="sans-serif-black"
-        android:id="@+id/isItAvailable"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="100dp"
-        android:layout_width="wrap_content"
-        android:text=""
-        android:textColor="#F6F8F5"
-        android:textSize="25dp"
-        android:textStyle="bold" />
+        <RelativeLayout
+            android:layout_width="fill_parent"
+            android:layout_height="120.0dip"
+            android:fitsSystemWindows="false"
+            android:background="#10000000">
+            <ImageView
+                android:background="@drawable/hometest"
+                android:id="@+id/te"
+                android:layout_height="120.0dip"
+                android:layout_width="fill_parent"
+                android:scaleType="fitXY" />
+        </RelativeLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <Button
+            android:background="@drawable/navigation_empty_icon"
+            android:id="@+id/btVar1"
+            android:layout_centerInParent="true"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:padding="16dp"
+            android:text=""
+            android:textSize="20dp" />
+
+       <!-- <TextView
+            android:fontFamily="sans-serif-black"
+            android:id="@+id/isItAvailable"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="100dp"
+            android:layout_width="wrap_content"
+            android:text=""
+            android:textColor="#F6F8F5"
+            android:textSize="25dp"
+            android:textStyle="bold" /> -->
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</io.hifii.drawertest.ScrimInsetsFrameLayout>
