--- a/app/src/main/res/layout/fragment_slideshow.xml
+++ b/app/src/main/res/layout/fragment_slideshow.xml
@@ -9,34 +9,34 @@
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     app:appInsetForeground="@android:color/transparent">
-    
+
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:id="@+id/coordinatorLayout"
         android:layout_height="match_parent"
         android:layout_width="match_parent">
-        
+
         <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/appBarLayout"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
-            
+
             <com.google.android.material.appbar.CollapsingToolbarLayout
                 android:id="@+id/collapsingToolbarLayout"
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 app:contentScrim="?attr/colorPrimary"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed">
-                
+
                 <ImageView
                     android:id="@+id/ivParallax"
-                    android:layout_height="wrap_content"
+                    android:layout_height="300.0dip"
                     android:layout_width="match_parent"
                     android:scaleType="centerCrop"
                     android:src="@drawable/sketchthemoon"
                     app:layout_collapseMode="parallax"
-                    app:layout_collapseParallaxMultiplier="0.65"/>
-                
+                    app:layout_collapseParallaxMultiplier="0.82" />
+
                 <TextView
                     android:id="@+id/text_slideshow"
                     android:layout_height="wrap_content"
@@ -50,8 +50,8 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"/>
-                
+                    app:layout_constraintTop_toTopOf="parent" />
+
                 <androidx.appcompat.widget.Toolbar
                     android:id="@+id/toolbar"
                     android:layout_height="?attr/actionBarSize"
@@ -59,31 +59,26 @@
                     app:layout_collapseMode="parallax"
                     app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                     app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-                    app:title=""/>
-                
-            
+                    app:title="" />
+
             </com.google.android.material.appbar.CollapsingToolbarLayout>
-            
-        
+
         </com.google.android.material.appbar.AppBarLayout>
-        
+
         <androidx.core.widget.NestedScrollView
             android:fillViewport="true"
             android:id="@+id/nestedScrollView"
             android:layout_height="match_parent"
             android:layout_width="match_parent"
             app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
-            
+
             <TextView
                 android:id="@+id/textView"
                 android:layout_height="wrap_content"
-                android:layout_width="match_parent"/>
-            
-        
+                android:layout_width="match_parent" />
+
         </androidx.core.widget.NestedScrollView>
-        
-    
+
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
-    
 
 </io.hifii.drawertest.ScrimInsetsFrameLayout>
